less borders on mobile, try to fix mix blend on ios

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,3 +62,9 @@ body {
 .floating-nav .navContainer {
   filter: drop-shadow(0px -25px 40px rgba(0,0,0,0.3));
 }
+
+
+.customMix {
+  transform: translate3d(0,0,0);
+  mix-blend-mode: soft-light;
+}
